# xarray_explorer_app

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
