[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray_explorer"
version = "0.1.0"
description = "A basic app for exploring xarray datasets"
authors = [
    { name = "Felix Bumann", email = "felixbumann387@gmail.com" },
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "streamlit>=1.45.1",
    "xarray>=2025.4.0",
]

[tool.poetry]
package-mode = false
